erDiagram
    USERMASTER ||--o{ STUDENTMASTER : has
    USERMASTER ||--o{ TEACHERMASTER : has
    USERMASTER ||--o{ HODMASTER : has
    USERMASTER {
        string user_id PK
        string name
        string email
        string password
        string phone
        enum role
    }
    DEPARTMENT ||--o{ BATCH : has
    DEPARTMENT ||--o{ TEACHERMASTER : has
    DEPARTMENT ||--|| HODMASTER : has
    DEPARTMENT {
        string department_id PK
        string department_name
    }
    BATCH ||--o{ SECTION : has
    BATCH {
        string batch_id PK
        string batch_name
        int start_year
        int end_year
        string department_id FK
    }
    SECTION ||--o{ STUDENTMASTER : has
    SECTION ||--o{ CLASS_SCHEDULE : has
    SECTION {
        string section_id PK
        string section_name
        string batch_id FK
    }
    SUBJECT ||--o{ SEMESTER_SUBJECT : has
    SUBJECT {
        string subject_id PK
        string subject_name
        string subject_code
    }
    SEMESTER_SUBJECT ||--o{ CLASS_SCHEDULE : has
    SEMESTER_SUBJECT {
        string semester_subject_id PK
        string department_id FK
        int semester
        string subject_id FK
    }
    CLASS_SCHEDULE ||--o{ ATTENDANCE : has
    CLASS_SCHEDULE {
        string schedule_id PK
        string section_id FK
        string semester_subject_id FK
        string teacher_id FK
        enum day_of_week
        time start_time
        time end_time
    }
    ATTENDANCE {
        int attendance_id PK
        string schedule_id FK
        string student_id FK
        date date
        enum status
    }
    STUDENTMASTER {
        string student_id PK,FK
        string section_id FK
        date admission_date
        int current_semester
    }
    TEACHERMASTER {
        string teacher_id PK,FK
        string department_id FK
        date joining_date
    }
    HODMASTER {
        string hod_id PK,FK
        string department_id FK
        date appointment_date
    }
    TEACHER_SECTION_ASSIGNMENT {
        string assignment_id PK
        string teacher_id FK
        string section_id FK
    }
    FORUM_MESSAGES {
        int message_id PK
        string sender_id FK
        string receiver_id FK
        text message_text
        datetime timestamp
    }
    TEACHERMASTER ||--o{ TEACHER_SECTION_ASSIGNMENT : assigned_to
    SECTION ||--o{ TEACHER_SECTION_ASSIGNMENT : has
    TEACHERMASTER ||--o{ CLASS_SCHEDULE : teaches
    USERMASTER ||--o{ FORUM_MESSAGES : sends
    USERMASTER ||--o{ FORUM_MESSAGES : receives
    STUDENTMASTER ||--o{ ATTENDANCE : has
